grammar.js
    document: ($) => repeat($.top_level_item),

    statement_list: ($) => seq($.statement, repeat(seq(";", $.statement)), optional(";")),

    line_comment: ($) => token(seq("//", /[^\n]*/)),

    block_comment: ($) =>
      seq(
        "/*",
        repeat(
          choice(
            /[^/*]+/,
            /\/[^*]/,
            /\*[^/]/,
            $.block_comment,
          ),
        ),
        "*/",
      ),

    attribute_list: ($) => repeat1($.attribute),

    attribute: ($) =>
      seq(
        "@",
        field("name", $.lower_identifier),
        optional(field("arguments", $.attribute_arguments)),
      ),

    attribute_arguments: ($) =>
      seq("(", optional(commaSep1($.attribute_argument)), optional(","), ")"),

    attribute_argument: ($) =>
      choice(
        $.keyword_attribute_argument,
        $.expression,
      ),

    function_declaration: ($) =>
      seq(
        optional(field("attributes", $.attribute_list)),
        "fn",
        field("name", choice($.lower_identifier, $.upper_identifier)),
        optional(field("type_parameters", $.type_parameter_list)),
        field("parameters", $.parameter_clause),
        optional(field("capabilities", $.capability_list)),
        optional(field("return_type", $.return_type)),
        optional(field("body", $.block)),
      ),

    struct_declaration: ($) =>
      seq(
        optional(field("attributes", $.attribute_list)),
        "struct",
        field("name", $.upper_identifier),
        optional(field("type_parameters", $.type_parameter_list)),
        optional(field("body", $.struct_declaration_body)),
      ),

    enum_declaration: ($) =>
      seq(
        optional(field("attributes", $.attribute_list)),
        "enum",
        field("name", $.upper_identifier),
        optional(field("type_parameters", $.type_parameter_list)),
        field("body", $.enum_declaration_body),
      ),

    type_alias_declaration: ($) =>
      seq(
        optional(field("attributes", $.attribute_list)),
        "type",
        field("name", $.upper_identifier),
        optional(field("type_parameters", $.type_parameter_list)),
        "=",
        field("value", $.type_alias_value),
      ),

    type_alias_value: ($) => choice($.sum_type_definition, $.type_expression),

    struct_declaration_body: ($) =>
      seq("{", optional(commaSep1($.struct_field_declaration)), optional(","), "}"),

    struct_field_declaration: ($) =>
      seq(
        optional(field("attributes", $.attribute_list)),
        field("name", $.lower_identifier),
        ":",
        field("type", $.slot_type),
        optional(seq("=", field("value", $.expression))),
      ),

    slot_type: ($) => choice($.inline_type_declaration, $.type_expression),

    inline_type_declaration: ($) =>
      choice(
        $.inline_struct_declaration,
        $.inline_enum_declaration,
        $.inline_newtype_declaration,
        $.inline_type_alias_declaration,
      ),

    inline_struct_declaration: ($) =>
      seq(
        optional(field("attributes", $.attribute_list)),
        "struct",
        optional(field("name", $.upper_identifier)),
        optional(field("body", $.struct_declaration_body)),
      ),

    inline_newtype_declaration: ($) =>
      seq(
        optional(field("attributes", $.attribute_list)),
        "newtype",
        optional(field("name", $.upper_identifier)),
        "of",
        field("value", $.type_expression),
      ),

    inline_type_alias_declaration: ($) =>
      seq(
        optional(field("attributes", $.attribute_list)),
        "type",
        optional(field("name", $.upper_identifier)),
        "=",
        field("value", $.type_alias_value),
      ),

    enum_declaration_body: ($) =>
      seq("{", optional(commaSep1($.enum_variant_declaration)), optional(","), "}"),

    enum_variant_declaration: ($) =>
      seq(
        optional(field("attributes", $.attribute_list)),
        "struct",
        field("name", $.upper_identifier),
        optional(field("body", $.struct_declaration_body)),
      ),

    sum_type_definition: ($) => prec.left(seq($.type_expression, repeat1(seq("|", $.type_expression)))),

    parameter_clause: ($) =>
      seq(
        "(",
        optional($.parameter_list),
        optional($.keyword_parameter_section),
        ")",
      ),

    parameter_list: ($) => seq(commaSep1($.parameter), optional(",")),

    keyword_parameter_section: ($) =>
      seq(";", optional(seq(commaSep1($.keyword_parameter), optional(",")))),

    parameter: ($) => seq(field("pattern", $.binding_pattern), ":", field("type", $.slot_type)),

    keyword_parameter: ($) =>
      seq(
        field("name", $.lower_identifier),
        ":",
        field("type", $.slot_type),
        optional(seq("=", field("default", $.expression))),
      ),

    return_type: ($) => seq("->", $.type_expression),

    type_parameter_list: ($) =>
      seq("[", optional(commaSep1($.type_parameter)), optional(","), "]"),

    type_parameter: ($) => $.upper_identifier,

    type_primary: ($) =>
      choice(
        $.function_type,
        $.unit_type,
        $.tuple_type,
        $.parenthesized_type,
        $.type_path,
      ),

    optional_type: ($) => prec.right(seq($.type_primary, "?")),

    unit_type: ($) => seq("(", ")"),

    tuple_type: ($) => seq("(", commaSep1($.type_expression), optional(","), ")"),

    function_type: ($) =>
      seq(
        "Fn",
        "(",
        optional(commaSep1($.type_expression)),
        optional(","),
        ")",
        optional($.capability_list),
        "->",
        $.type_expression,
      ),

    capability_list: ($) => repeat1($.capability_tag),

    capability_tag: ($) => seq("#", $.lower_identifier),

    type_path: ($) =>
      prec.left(
        seq(
          field("head", $.upper_identifier),
          repeat(seq(".", field("member", $.upper_identifier))),
          optional(field("type_arguments", $.type_arguments)),
        ),
      ),

    type_arguments: ($) => seq("[", optional(commaSep1($.type_expression)), optional(","), "]"),

    binding_pattern: ($) =>
      choice(
        $.wildcard_pattern,
        $.unit_pattern,
        $.lower_identifier,
        $.tuple_pattern,
        $.struct_pattern,
        $.array_pattern,
        $.parenthesized_pattern,
      ),

    parenthesized_pattern: ($) => seq("(", $.pattern, ")"),

    wildcard_pattern: ($) => "_",

    unit_pattern: ($) => seq("(", ")"),

    literal_pattern: ($) =>
      choice(
        $.integer_literal,
        $.float_literal,
        $.boolean_literal,
        $.string_literal,
      ),

    struct_pattern: ($) =>
      seq("{", optional(commaSep1($.struct_pattern_field)), optional(","), "}"),

    struct_pattern_field: ($) =>
      choice(
        seq(field("name", $.lower_identifier), ":", field("pattern", $.pattern)),
        field("name", $.lower_identifier),
        prec(20, ".."),
      ),

    array_pattern: ($) =>
      seq("[", optional(commaSep1($.array_pattern_item)), optional(","), "]"),

    array_pattern_item: ($) => choice($.pattern, $.array_rest_pattern),

    array_rest_pattern: ($) => prec(20, choice("..", seq("..", $.lower_identifier))),

    primary_expression: ($) =>
      choice(
        $.identifier_expression,
        $.integer_literal,
        $.float_literal,
        $.boolean_literal,
        $.string_literal,
        $.interpolated_string,
        $.path_literal,
        $.interpolated_path_literal,
        $.array_expression,
        $.record_expression,
        $.map_expression,
        $.unit_expression,
        $.tuple_expression,
        $.parenthesized_expression,
        $.block,
        $.import_expression,
        $.fail_expression,
        $.method_adapter_expression,
        $.pipe_placeholder,
        $.dollar_identifier,
      ),

    identifier_expression: ($) => choice($.lower_identifier, $.upper_identifier),

    integer_literal: ($) => /\d(?:[\d_]*\d)?/,

    boolean_literal: ($) => choice("true", "false"),

    string_literal: ($) =>
      seq(
        "\"",
        repeat(choice($.escape_sequence, alias(token.immediate(/[^"\\\n]+/), $.string_content))),
        "\"",
      ),

    unit_expression: ($) => seq("(", ")"),

    block: ($) => seq("{", optional($.statement_list), "}"),

    record_expression: ($) =>
      seq("{", optional(commaSep1($.record_field)), optional(","), "}"),

    record_field: ($) =>
      choice(
        seq(field("name", $.lower_identifier), ":", field("value", $.expression)),
        field("shorthand", $.lower_identifier),
        seq("..", field("spread", $.expression)),
      ),

    application_expression: ($) =>
      choice(
        prec.left(
          PREC.application + 1,
          seq(
            field(
              "function",
              choice(
                $._postfix_target,
                $.application_expression,
                $.keyword_application_expression,
              ),
            ),
            field("argument", $.map_expression),
          ),
        ),
        prec.left(
          PREC.application + 1,
          seq(
            field(
              "function",
              choice(
                $._postfix_target,
                $.application_expression,
                $.keyword_application_expression,
              ),
            ),
            field("argument", $.record_expression),
          ),
        ),
        prec.left(
          PREC.application,
          seq(
            field(
              "function",
              choice(
                $._postfix_target,
                $.application_expression,
                $.keyword_application_expression,
              ),
            ),
            field("argument", $._application_argument),
          ),
        ),
      ),

    _application_argument: ($) =>
      choice(
        $._postfix_target,
        $.if_expression,
        $.match_expression,
        $.arrow_closure,
      ),

    keyword_application_expression: ($) =>
      choice(
        prec.left(
          PREC.application,
          seq(
            field(
              "function",
              choice(
                $._postfix_target,
                $.application_expression,
                $.keyword_application_expression,
              ),
            ),
            "where",
            field("argument", $.record_expression),
          ),
        ),
        prec.left(
          PREC.application,
          seq(
            field(
              "function",
              choice(
                $._postfix_target,
                $.application_expression,
                $.keyword_application_expression,
              ),
            ),
            "where",
            field("argument", $.expression),
          ),
        ),
      ),

    index_expression: ($) =>
      prec.left(
        PREC.postfix,
        seq(field("value", $._postfix_target), $._immediate_l_bracket, field("index", $.expression), "]"),
      ),

    field_expression: ($) =>
      prec.left(
        PREC.postfix,
        seq(
          field("value", $._postfix_target),
          $._immediate_dot,
          field("field", choice($.lower_identifier, $.upper_identifier, $.tuple_index)),
        ),
      ),

    _postfix_target: ($) =>
      choice(
        $.primary_expression,
        $.field_expression,
        $.index_expression,
        $.invocation_expression,
        $.fallible_expression,
      ),

    tuple_index: ($) => /_[0-9]+/,

    match_expression: ($) =>
      seq("match", field("value", $.expression), "{", optional(commaSep1($.match_arm)), optional(","), "}"),

    match_arm: ($) =>
      seq(
        field("pattern", $.pattern),
        optional(seq("if", field("guard", $.expression))),
        "=>",
        field("value", $.expression),
      ),

    _immediate_l_bracket: ($) => token.immediate("["),

    _immediate_dot: ($) => token.immediate("."),

    lower_identifier: ($) => /(?:[a-z][A-Za-z0-9_]*|_[A-Za-z0-9_]+)/,

    upper_identifier: ($) => /[A-Z][A-Za-z0-9_]*/,
  },
});

function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)));
}
